config/envoy-config.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: example_cluster

  clusters:
  # This is the EDS server itself (our Java application)
  - name: eds_cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY  # Force IPv4 DNS resolution
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}  # Use HTTP/2 for gRPC
    load_assignment:
      cluster_name: eds_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # Use host.docker.internal to access the host from Docker
                address: host.docker.internal
                port_value: 18000

  # This is the cluster that will get its endpoints from EDS
  - name: example_cluster
    connect_timeout: 0.25s
    type: EDS  # Endpoints will be discovered via EDS
    lb_policy: ROUND_ROBIN
    eds_cluster_config:
      eds_config:
        resource_api_version: V3
        api_config_source:
          api_type: GRPC
          transport_api_version: V3
          grpc_services:
            - envoy_grpc:
                cluster_name: eds_cluster

# Configure Envoy to use the EDS service for dynamic endpoint discovery
dynamic_resources:
  # We're only using EDS for this simple example
  ads_config:
    api_type: GRPC
    transport_api_version: V3
    grpc_services:
      - envoy_grpc:
          cluster_name: eds_cluster
    set_node_on_first_message_only: true
    
node:
  id: "envoy-test-node"
  cluster: "test-cluster"
  metadata:
    environment: "development"
